Added After Party info

--- a/style.css
+++ b/style.css
@@ -1856,6 +1856,13 @@ section.greyish {
     padding-left: 2em;
     border-left: 2px solid #ccc;
 }
+.timeline .experiencepast {
+    position: relative;
+    float: left;
+    margin-left: 2em;
+    padding-left: 2em;
+    border-left: 2px dashed #ccc;
+}
 
 .timeline .experience-info h5 {
     margin-top: 0;
